Paciente add on Repository and Database

--- a/ClinicaApi/appsettings.json
+++ b/ClinicaApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ClinicaConnection": ""
+    "ClinicaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ClinicaDatabase;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
