--- a/ClinicaService/ClinicaService.csproj
+++ b/ClinicaService/ClinicaService.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.27.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClinicaRepository\ClinicaRepository.csproj" />
   </ItemGroup>
 
