--- a/ClinicaApi/ClinicaApi.csproj
+++ b/ClinicaApi/ClinicaApi.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\ClinicaService\ClinicaService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AutoMapper\" />
+  </ItemGroup>
+
 </Project>
