--- a/ClinicaSite/ClinicaSite.csproj
+++ b/ClinicaSite/ClinicaSite.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Services\LoginService\Interfaces\" />
+    <Folder Include="Services\RegistrationService\" />
   </ItemGroup>
 
 </Project>
