--- a/ClinicaApi/appsettings.json
+++ b/ClinicaApi/appsettings.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ClinicaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ClinicaDatabase;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ClinicaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ClinicaDatabase;Integrated Security=True;"
   }
 }
