Form de cadastro, cadastra usuario corretamente

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -1,5 +1,7 @@
 {
   "apiLocation": "https://localhost:7020",
+  "authTokenStorageKey": "authToken",
+
 
   //Registration / Authentication
   "loginEndpoint": "/login",
@@ -8,20 +10,6 @@
   "getAllUsersEndpoint": "/getallusers",
   "getUserByIdEndpoint": "/getuserbyid",
   "updateUserEndpoint": "/updateuser",
-  //Roadmap
-  "getAllRoadmapsEndpoint": "/getallroadmaps",
-  "createroadmapEndpoint": "/createroadmap",
-  "updateRoadmapEndpoint": "/updateroadmap",
-  "getRoadmapByUserIdEndpoint": "/getroadmapbyuserid",
-  "getRoadmapByIdEndpoint": "/getroadmapbyid",
-  "deleteRoadmapEndpoint": "/deleteroadmap",
-  //RoadmapVote
-  "addRoadmapVoteEndpoint": "/addroadmapvote",
-  "getAllRoadmapVotesEndpoint": "/getallroadmapvotes",
-  "removeRoadmapVoteEndpoint": "/removeroadmapvote",
-  "authTokenStorageKey": "authToken",
-  //Comentario
-  "createComentarioEndpoint": "/createcomentario",
-  "getAllComentariosEndpoint": "/getallcomentarios",
-  "deleteComentarioEndpoint": "/deletecomentario"
+  //Paciente
+  "registerPacienteEndpoint": "/registerpaciente"
 }
