Add buscar pacientes na index, estilizado

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -11,5 +11,6 @@
   "getUserByIdEndpoint": "/getuserbyid",
   "updateUserEndpoint": "/updateuser",
   //Paciente
-  "registerPacienteEndpoint": "/registerpaciente"
+  "registerPacienteEndpoint": "/registerpaciente",
+  "getAllPacientesEndpoint": "/getallpacientes"
 }
