Details page finalizada

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -12,5 +12,6 @@
   "updateUserEndpoint": "/updateuser",
   //Paciente
   "registerPacienteEndpoint": "/registerpaciente",
-  "getAllPacientesEndpoint": "/getallpacientes"
+  "getAllPacientesEndpoint": "/getallpacientes",
+  "getPacienteByIdEndpoint": "/getpacientebyid"
 }
