Clinica pode atualizar cadastro de pacientes

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -6,12 +6,15 @@
   //Registration / Authentication
   "loginEndpoint": "/login",
   "registerEndpoint": "/register",
-  //User
+  //User / Clinica
   "getAllUsersEndpoint": "/getallusers",
   "getUserByIdEndpoint": "/getuserbyid",
   "updateUserEndpoint": "/updateuser",
+  "getClinicaByIdEndpoint": "/getclinicabyid",
+  "updateClinicaEndpoint": "/updateclinica",
   //Paciente
   "registerPacienteEndpoint": "/registerpaciente",
   "getAllPacientesEndpoint": "/getallpacientes",
-  "getPacienteByIdEndpoint": "/getpacientebyid"
+  "getPacienteByIdEndpoint": "/getpacientebyid",
+  "updatePacienteEndpoint": "/updatepaciente"
 }
