Consulta entity setup finalizado no back e front

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -16,5 +16,11 @@
   "registerPacienteEndpoint": "/registerpaciente",
   "getAllPacientesEndpoint": "/getallpacientes",
   "getPacienteByIdEndpoint": "/getpacientebyid",
-  "updatePacienteEndpoint": "/updatepaciente"
+  "updatePacienteEndpoint": "/updatepaciente",
+  // Consulta
+  "getAllConsultasEndpoint": "/getallconsultas",
+  "getConsultaByIdEndpoint": "/getconsultabyid",
+  "createConsultaEndpoint": "/createconsulta",
+  "deleteConsultaEndpoint": "/deleteconsulta",
+  "updateConsultaEndpoint": "/updateconsulta"
 }
