Perfil do usuário mostra se tem uma consulta ativa - Consulta ativa funciona como uma consulta que esta a ocorrer ainda - Se a clinica agendar uma consulta para um paciente que tem um consulta ativa, a consulta ativa é substituida por uma nova

--- a/ClinicaSite/wwwroot/appsettings.json
+++ b/ClinicaSite/wwwroot/appsettings.json
@@ -20,6 +20,7 @@
   // Consulta
   "getAllConsultasEndpoint": "/getallconsultas",
   "getConsultaByIdEndpoint": "/getconsultabyid",
+  "getConsultasByPacienteIdEndpoint": "/getconsultabypacienteid",
   "createConsultaEndpoint": "/createconsulta",
   "deleteConsultaEndpoint": "/deleteconsulta",
   "updateConsultaEndpoint": "/updateconsulta"
